--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Temperature Chart - TAWES Stations with fallback</title>
+  <title>Temperature Chart - TAWES Stations with fallback & responsive</title>
   <style>
     body {
       font-family: Arial, sans-serif;
       max-width: 900px;
-      margin: 2rem auto;
+      margin: 1rem auto;
       padding: 0 1rem;
       background: #f7f9fc;
       color: #333;
@@ -16,41 +16,38 @@
     h1 {
       text-align: center;
       margin-bottom: 1rem;
+      font-size: 1.5rem;
+    }
+    .controls {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      gap: 1rem;
+      flex-wrap: wrap;
+      margin-bottom: 1rem;
     }
     label {
       font-weight: bold;
       margin-right: 0.5rem;
+      white-space: nowrap;
     }
     select {
-      padding: 0.3rem 0.5rem;
+      padding: 0.4rem 0.6rem;
       font-size: 1rem;
-      margin-bottom: 1rem;
       min-width: 250px;
-    }
-    #last-updated {
-      margin-top: 0.5rem;
-      font-style: italic;
-      color: #555;
-      text-align: center;
-    }
-    canvas {
-      background: white;
-      border: 1px solid #ddd;
-      border-radius: 6px;
-      box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+      border-radius: 4px;
+      border: 1px solid #ccc;
     }
     #location-btn {
-      display: inline-block;
-      margin-left: 1rem;
-      padding: 0.4rem 0.8rem;
+      padding: 0.5rem 1rem;
       font-size: 1rem;
-      cursor: pointer;
       background-color: #007bff;
       border: none;
       color: white;
       border-radius: 4px;
-      vertical-align: middle;
+      cursor: pointer;
       transition: background-color 0.2s ease;
+      flex-shrink: 0;
     }
     #location-btn:hover:not(:disabled) {
       background-color: #0056b3;
@@ -59,21 +56,71 @@
       background-color: #999;
       cursor: default;
     }
+    #last-updated {
+      margin-top: 0.5rem;
+      font-style: italic;
+      color: #555;
+      text-align: center;
+      font-size: 0.9rem;
+    }
     #error-msg {
       color: #cc0000;
       font-weight: bold;
       margin-top: 0.5rem;
       text-align: center;
       min-height: 1.2em;
+      font-size: 0.95rem;
+    }
+    canvas {
+      background: white;
+      border: 1px solid #ddd;
+      border-radius: 6px;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+      max-width: 100%;
+      height: auto !important;
+      display: block;
+      margin: 0 auto;
+    }
+
+    /* Responsive tweaks */
+    @media (max-width: 480px) {
+      .controls {
+        flex-direction: column;
+        align-items: stretch;
+        gap: 0.75rem;
+      }
+      label {
+        margin-right: 0;
+        text-align: center;
+        font-size: 1.1rem;
+      }
+      select, #location-btn {
+        width: 100%;
+        min-width: auto;
+        font-size: 1.1rem;
+        padding: 0.6rem;
+      }
+      h1 {
+        font-size: 1.3rem;
+        margin-bottom: 1rem;
+      }
+      #last-updated {
+        font-size: 0.85rem;
+      }
+      #error-msg {
+        font-size: 0.9rem;
+      }
     }
   </style>
 </head>
 <body>
   <h1>Current Temperature (TAWES Stations)</h1>
 
-  <label for="station-select">Select Station:</label>
-  <select id="station-select"></select>
-  <button id="location-btn" title="Find nearest station to your current location">Use My Location</button>
+  <div class="controls">
+    <label for="station-select">Select Station:</label>
+    <select id="station-select"></select>
+    <button id="location-btn" title="Find nearest station to your current location">Use My Location</button>
+  </div>
 
   <canvas id="tempChart" width="800" height="400"></canvas>
   <div id="last-updated"></div>
