--- a/index.html
+++ b/index.html
@@ -215,9 +215,10 @@ async function fetchWithFallback(remoteUrl, localUrl) {
 
 async function loadForecastPoints() {
   try {
-    const response = await fetch('https://www.geosphere.at/data/forecasts/points');
-    if (!response.ok) throw new Error(`HTTP ${response.status}`);
-    forecastPoints = await response.json();
+    forecastPoints = await fetchWithFallback(
+      'https://www.geosphere.at/data/forecasts/points',
+      './points_forecast.json'
+    );
   } catch (err) {
     forecastPoints = [];
   }
